# wagtail-readonly-task

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: ruff.yml  test.yml
src/wagtail_readonly_task/: apps.py  models.py  monkey_patches.py  views.py  wagtail_hooks.py
src/wagtail_readonly_task/migrations/: 0001_initial.py
src/wagtail_readonly_task/static/workflows/css/: wagtail-readonly-task.css
src/wagtail_readonly_task/static/workflows/js/: wagtail-readonly-task.js
src/wagtail_readonly_task/templates/wagtailadmin/pages/: edit.html
src/wagtail_readonly_task/templatetags/: ons_workflow_tags.py
tests/testapp/: __init__.py  apps.py  settings.py
