[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-readonly-task"
authors = [{name = "Dan Braghis", email = "dan.braghis@torchbox.com"}]
description = "Provides a read-only Workflow Task"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=5.2"
]
[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.6.0",
    "pytest>=8.3.2,<8.4",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
]
ci = [
    "tox>=4.17.0,<5",
    "tox-gh-actions>=3.2.0,<4",
]

[project.urls]
Home = "https://github.com/zerolab/wagtail-readonly-task"

[tool.flit.module]
name = "wagtail_readonly_task"

[tool.flit.sdist]
exclude = [
    "wagtail_readonly_task/test",
    "wagtail_readonly_task/static/wagtail_readonly_task/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wagtail_readonly_task.test.settings"
